# syncwheel

./: .gitignore  .mailmap  AGENT.md  CHANGELOG.md  LICENSE  README.md  install.md  llms.txt  openpack.json  pyproject.toml
.github/workflows/: ci.yml  fixture-smoke.yml
.syncwheel/: manifest.json
.syncwheel/manifests/: README.md
docs/: agent-procedure.md  ai-agents.md  branch-model.md  core-procedure.md  deterministic-model.md  index.html  manifest-tracking.md  manifest.md  manual-git-flow.md  public-article.md  workflow-longform.md  workflow.md
docs/design/: housekeeping-after-merge.md
examples/: manifest.example.json
githooks/: pre-commit
scripts/: check-version-bump.py  install.sh  syncwheel-status.sh  syncwheel.py
skills/syncwheel/: SKILL.md
tests/: test_syncwheel.py
